<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactViewer</string>
    <string name="contacts">Contacts</string>
    <string name="about">About</string>
    
    <string name="title">Title</string>
    <string name="phone">Phone</string>
    
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="new_contact">New</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="contact_label_name">Name</string>
    <string name="contact_label_email">Email</string>
    <string name="contact_label_title">Title</string>
    <string name="contact_label_phone">Phone</string>
    <string name="contact_label_twitter">Twitter</string>
    <string name="toolbar_details">Details</string>
    
    <string name="contact_dynamicValue">&lt;&lt; text >></string>
    
    <string name="about_view_subheading">Presented By</string>
    <string name="about_view_group">Pink Panthers</string>
    <string name="about_view_member1">Evan Braaten</string>
    <string name="about_view_member2">Farouk Althlathini</string>
    <string name="about_view_member3">Vladimir Beliaev</string>
    <string name="about_view_member4">Brian Stevenson</string>
    
    <string name="delete_confirmation">Are you sure you want delete this contact?</string>
    
    <string name="item_icon_description">Item Icon</string>
    <string name="logo_description">Logo</string>
    
    
</resources>