<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/about_toolbar"
        style="@style/Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/toolbar_about_back_button"
            style="@style/ToolbarButton"
            android:layout_weight="0"
            android:onClick="backClicked"
            android:text="@string/back" />

        <TextView
            android:id="@+id/toolbar_about_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.16"
            android:text="@string/about" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_view_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_subheading"
            android:textColor="@color/text_color_black"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/about_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_group"
            android:textColor="@color/text_color_black"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/about_view_member1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_member1"
            android:textColor="@color/text_color_black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/about_view_member2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_member2"
            android:textColor="@color/text_color_black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/about_view_member3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_member3"
            android:textColor="@color/text_color_black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/about_view_member4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="top"
            android:text="@string/about_view_member4"
            android:textColor="@color/text_color_black"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>